// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartButton /> should not be visible with prop visible set to false 1`] = `
<button
  className="css-nmjls1"
  onClick={[Function]}
  style={Object {}}
>
  <Ripple
    className="css-167cazg"
    color="#000"
    disabled={false}
    fill={true}
    onComplete={[Function]}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="css-ggepo6"
      productCount={0}
    />
  </Ripple>
</button>
`;

exports[`<CartButton /> should render with cartProductCount beeing set to 4 1`] = `
<button
  className="css-nmjls1"
  onClick={[Function]}
  style={
    Object {
      "minWidth": 56,
      "transform": "translate3d(0, 0, 0)",
      "transitionDelay": "600ms",
    }
  }
>
  <Ripple
    className="css-167cazg"
    color="#000"
    disabled={false}
    fill={true}
    onComplete={[Function]}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="css-ggepo6"
      productCount={4}
    />
  </Ripple>
</button>
`;

exports[`<CartButton /> should show '99+' if the cart amount is higher 1`] = `
<button
  className="css-nmjls1"
  onClick={[Function]}
  style={
    Object {
      "minWidth": 56,
      "transform": "translate3d(0, 0, 0)",
      "transitionDelay": "600ms",
    }
  }
>
  <Ripple
    className="css-167cazg"
    color="#000"
    disabled={false}
    fill={true}
    onComplete={[Function]}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="css-ggepo6"
      productCount={115}
    />
  </Ripple>
</button>
`;

exports[`<CartButton /> should transition if it has cart amount 1`] = `
<button
  className="css-nmjls1"
  onClick={[Function]}
  style={
    Object {
      "minWidth": 56,
      "transform": "translate3d(0, 0, 0)",
      "transitionDelay": "600ms",
    }
  }
>
  <Ripple
    className="css-167cazg"
    color="#000"
    disabled={false}
    fill={true}
    onComplete={[Function]}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="css-ggepo6"
      productCount={5}
    />
  </Ripple>
</button>
`;
